# glowing-engine

./: .gitignore  readme.md
core/: CMakeLists.txt  copy.txt
core/ext/glad/: glad.c.old  glad.h.old
core/ext/glfw-3.4/: CMakeCache.txt
core/ext/imguizmo/: ImGuizmo.cpp
core/resources/fonts/28DaysLater/: 28DaysLater.json
core/resources/fonts/agency/: 23.json  agency.json
core/resources/fonts/jianjianti/: jianjianti.json
core/resources/fonts/roughsplash/: roughsplash.json
core/resources/fonts/tx02/: tx02.json
core/resources/models/: Bamboo.mtl
core/resources/models/924/: license.txt  scene.gltf
core/resources/models/die/: scene.gltf
core/resources/shaders/: crosshair_f.glsl  crosshair_v.glsl  debug_f.glsl  debug_v.glsl  deferred_f.glsl  deferred_light_f.glsl  deferred_light_v.glsl  deferred_lighting_debug_f.glsl  deferred_v.glsl  disney_f.glsl  disney_v.glsl  editor_v.glsl  fragment.glsl  fres_f.glsl  fres_v.glsl  shadow_map_v.glsl  text_hud_f.glsl  text_hud_v.glsl  toon.glsl  vertex.glsl  weapon2_f.glsl  weapon2_v.glsl  weapon_f.glsl  weapon_v.glsl  world_geometry_f.glsl  world_geometry_v.glsl
core/resources/shaders/compute/: cluster.comp  cluster_cull.comp
core/src/: Renderer.h  TODO  camera.h  chunk.h  controller.h  controller_fps.h  controller_plane.h  controller_thirdperson.h  crosshair.h  entity.cpp  entity.h  font.h  frustum.h  hands.h  light.h  main.cpp  material.h  material_disney.cpp  material_disney.h  mesh.cpp  mesh.h  model.cpp  model.h  model_ass.cpp  model_ass.h  physics.cpp  physics.h  player.h  renderer.h  renderer_debug.cpp  renderer_debug.h  scene.cpp  scene.h  shader.h  shader_compute.h  skybox.h  text.h  texture_manager.cpp  texture_manager.h  weapon.h  (+1 more)
core/src/asset/: crosshair.h  font.h  material.h  material_disney.cpp  mesh.cpp  mesh.h  model_ass.cpp  model_ass.h  model_manager.cpp  model_manager.h  shader_manager.cpp  shader_manager.h  skybox.h  text.h  texture_manager.cpp  texture_manager.h
core/src/core/: audio.cpp  audio.h  camera.h  entity.cpp  entity.h  light.h  physics.cpp  physics.h  renderer.h  renderer_debug.cpp  renderer_debug.h  scene.cpp  scene.h
core/src/general/: colors.h
core/src/player/: chunk.h  controller.h  controller_fps.h  controller_plane.h  controller_thirdperson.h  hands.h  player.h  weapon.h  world_geometry.h
core/src/util/: aabb.h  decompose.h  frustum.h  obb.h
